<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:subtitleTextColor="@android:color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rootlayout"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/prematix"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hosur_office"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_black"
                    android:drawablePadding="10dp"
                    android:text="@string/hosur_company_address"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_old_typical_phone"
                    android:drawablePadding="10dp"
                    android:text="@string/hosur_company_landline"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_smartphone"
                    android:text="@string/hosur_company_mobile"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_mail_black_envelope_symbol"
                    android:text="@string/hosur_company_email"
                    android:padding="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/blr_office"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_black"
                    android:drawablePadding="10dp"
                    android:text="@string/blr_company_address"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_old_typical_phone"
                    android:drawablePadding="10dp"
                    android:text="@string/blr_company_landline"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_mail_black_envelope_symbol"
                    android:text="@string/blr_company_email"
                    android:padding="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>