<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:subtitleTextColor="@android:color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin_5"
            android:layout_margin="@dimen/margin_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ur_name"
                        android:padding="@dimen/margin_5"
                        android:textColor="@color/white"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text_white"
                        android:padding="@dimen/margin_5"
                        android:hint="@string/enter_name"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ur_email"
                        android:padding="@dimen/margin_5"
                        android:textColor="@color/white"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text_white"
                        android:padding="@dimen/margin_5"
                        android:hint="@string/enter_email"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ur_reason"
                        android:padding="@dimen/margin_5"
                        android:textColor="@color/white"/>

                    <!--<EditText-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="@drawable/bg_text_white"-->
                        <!--android:padding="@dimen/margin_5"-->
                        <!--android:id="@+id/et_reason"-->
                        <!--android:drawableRight="@drawable/ic_arrow_drop_down"-->
                        <!--android:hint="@string/select_reason"/>-->

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text_white"
                        android:padding="@dimen/margin_5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:padding="@dimen/margin_5"
                        android:textColor="@color/white"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text_white"
                        android:padding="@dimen/margin_5"
                        android:lines="3"
                        android:maxLines="3"
                        android:hint="@string/enter_message"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/send"
                        android:id="@+id/btn_send"
                        android:background="@color/colorAccent"
                        android:textColor="@color/white"
                        android:layout_margin="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>